# BasicRayTracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
images/: lots-of-spheres.ppm
include/: brt.hpp  color.hpp  hit_info.hpp  hittable.hpp  hittable_list.hpp  point3.hpp  progress.hpp  ray.hpp  rtiow.hpp  sphere.hpp  utils.hpp  vector3.hpp
include/brt/: camera.hpp  color.hpp  hit_info.hpp  hittable.hpp  hittable_list.hpp  moving_point3.hpp  point3.hpp  progress.hpp  ray.hpp  sphere.hpp  utils.hpp  vector3.hpp
include/brt/hittables/: axis_aligned_rectangle.hpp  bounding_box.hpp  box.hpp  bvh_node.hpp  constant_density_medium.hpp  flip_face.hpp  hit_info.hpp  hittable.hpp  hittable_list.hpp  moving_sphere.hpp  rotate.hpp  sphere.hpp  translate.hpp
include/brt/materials/: dielectric.hpp  diffuse_light.hpp  isotropic.hpp  lambertian.hpp  material.hpp  metal.hpp
include/brt/misc/: axis.hpp  orthonormal_basis.hpp  perlin.hpp  plane.hpp
include/brt/render/: camera.hpp  image.hpp  pixel.hpp  renderer.hpp
include/brt/textures/: checker.hpp  image.hpp  noise.hpp  solid_color.hpp  texture.hpp
include/rtiow/: camera.hpp  color.hpp  hit_info.hpp  hittable.hpp  hittable_list.hpp  point3.hpp  progress.hpp  ray.hpp  sphere.hpp  utils.hpp  vector3.hpp
include/rtiow/materials/: dielectric.hpp  lambertian.hpp  material.hpp  metal.hpp
src/: color.cpp  hit_info.cpp  hittable_list.cpp  main.cpp  progress.cpp  ray.cpp  sphere.cpp  utils.cpp  vector3.cpp
src/brt/: camera.cpp  color.cpp  hit_info.cpp  hittable.cpp  hittable_list.cpp  moving_point3.cpp  progress.cpp  ray.cpp  sphere.cpp  utils.cpp  vector3.cpp
src/brt/hittables/: axis_aligned_rectangle.cpp  bounding_box.cpp  box.cpp  (+10 more)
src/rtiow/: camera.cpp  color.cpp  hit_info.cpp  hittable.cpp  hittable_list.cpp  progress.cpp  ray.cpp  sphere.cpp  utils.cpp  vector3.cpp
(+19 files in other folders)
